crates/rome_diagnostics/tests/macros/location_eq.stderr
error: failed to parse "location" attribute: expected parentheses
 --> tests/macros/location_eq.rs:5:16
  |
5 |     #[location = Identifier]
  |                ^

error: unexpected expression: `Identifier`
 --> tests/macros/location_eq.rs:5:18
  |
5 |     #[location = Identifier]
  |                  ^^^^^^^^^^
