crates/rome_diagnostics/tests/macros/location_eq.rs
use rome_diagnostics::v2::Diagnostic;

#[derive(Debug, Diagnostic)]
struct TestDiagnostic {
    #[location = Identifier]
    location: (),
}

fn main() {}
